--- a/gestion_rdv.html
+++ b/gestion_rdv.html
@@ -13,21 +13,25 @@
 <a href="messagerie.html"><img src="imageAcceuil/msg.png"  width='50' class="msg"></a>
 <a href="document.html"><img src="imageAcceuil/doc.png"  width='50' alt="" class="doc"></a>
 <img src="imageAcceuil/profil.png" class="profil"  width='50' alt="">
+<!-- menu deroulant -->
 <div class="dropdown3">
   <button class="dropdown-toggle">Nome</button>
-  <ul class="dropdown-menu">
+  <ul class="dropdown-menu" id="dropdown-menu">
     <li><a href="mon_profil.html">O meu perfil</a></li>
     <li><a href="deconnexion.php">Terminar sessão</a></li>
   </ul>
 </div>
+
+
+<!-- fin menu deroulant -->
 </header>
 <div class="container">
 <div id=colonne1 class="colonne">
   <h2>ADMINISTRADOR DA CONTA</h2>
   <h3 class="title4">Lista de pessoas associadas à conta</h3>
-  <label class="textelogin"><input type="image" class="ajouter" src="imageAcceuil/Image15.png" width="5%" class="boutonAjouter"> Adicionar uma pessoa</label>
+  <label class="textelogin2"><input type="image" class="ajouter" src="imageAcceuil/Image15.png" width="5%" class="boutonAjouter"> Adicionar uma pessoa</label>
   <h3 >Lista de animais associadas à conta</h3>
-  <label class="textelogin"><input type="image" class="ajouter" src="imageAcceuil/Image15.png" width="5%" class="boutonAjouter"> Adicionar um animal de estimação</label>
+  <label class="textelogin2"><input type="image" class="ajouter" src="imageAcceuil/Image15.png" width="5%" class="boutonAjouter"> Adicionar um animal de estimação</label>
   </div>
 
   <div id=colonne2 class="colonne">
@@ -39,7 +43,7 @@
       <button type="button" class="boutNorm" id="boutMarcar" name="button">Marcar uma consulta</button>
     </div>
 
-</div>
+</div> 
 
 
 
