--- a/gestion_rdv.html
+++ b/gestion_rdv.html
@@ -10,6 +10,7 @@
 <header class="headerPersonne">
 <a href="acceuil.html" id="lien9Bis"><img  src="imageAcceuil/Image9.png" width="90"></a>
 <h1  class="title2">As minhas marcações</h1>
+<a href="téléconsultation.html"><img src="imageAcceuil/visio.png"  width='250' class="visio"></a>
 <a href="messagerie.html"><img src="imageAcceuil/msg.png"  width='50' class="msg"></a>
 <a href="document.html"><img src="imageAcceuil/doc.png"  width='50' alt="" class="doc"></a>
 <img src="imageAcceuil/profil.png" class="profil"  width='50' alt="">
