--- a/mon_profil.html
+++ b/mon_profil.html
@@ -42,7 +42,10 @@
 <p>Data de nacimiento</p>
 <p>E-mail</p>
 <p>Telephone</p>
-
+<p>Nùmero de conta</p>
+<p>Nome de seguro de saude</p>
+<p>Nùmero de segurança social</p>
+<p>Nùmero de seguro de saùde</p>
 </div>
 
 </div>
@@ -77,10 +80,15 @@ document.getElementById("photoProfil").addEventListener("click", function(){
 
 <br>
 <h1>ANIMAIS ASSOCIADOS A CONTA</h1>
-<div class='cadre'></div>
+<div id="cadre3" class='cadre'></div>
 <br>
 <h1>PARAMETRO</h1>
-<div class="cadre"></div>
+<div id="cadre4" class="cadre">
+
+<a href="">Lingua</a>
+<a href="">Método de pagamento  </a>
+<a href="">Eliminar a minha conta</a>
+</div>
 
 <footer>
 <a href="aviso_legal.php" id="liensAvisLegal"> aviso legal</a>
